# cloudoll-py

./: .gitignore  LICENSE  README.md  publish.py  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.cfg  setup.py  test.py  tests.py
cloudoll/: __init__.py  __main__.py  cli.py
cloudoll/clitool/: cli_main.py  m2d.py  process.py  spinner.py  watch.py
cloudoll/error/: errors.py
cloudoll/logging/: __init__.py  more.md
cloudoll/mail/: pop3._py  smtp.py
cloudoll/orm/: __init__.py  awsmysql.py  awspostgres.py  base.py  err.py  field.py  model.py  mysql.py  parse.py  postgres.py  test_aws.py  test_sql.py
cloudoll/robot/: dingtalk.py  feishu.py  slack.py
cloudoll/template/: .gitignore  README.md  requirements.txt
cloudoll/template/config/: conf.local.yaml
cloudoll/template/controllers/admin/: test.py
cloudoll/template/controllers/api/: index.py
cloudoll/template/controllers/es/: es.py
cloudoll/template/controllers/home/: index.py
cloudoll/template/controllers/upload/: upload.py
cloudoll/template/controllers/ws/: ws.py
cloudoll/template/middlewares/: auth.py
cloudoll/template/static/css/: index.css
cloudoll/template/static/img/: cat.avif
cloudoll/template/static/js/: index.js
cloudoll/template/templates/: index.html
cloudoll/utils/: cli_main.py  cli_mian.py  common.py  m2d.py  password.py  patch_loop.py  snowflake.py  watch.py
cloudoll/web/: __init__.py  core.py  exception.py  html.py  http.py  jwt.py  requests.py  server.py  settings.py
orm/: mysql.py
tests/: app.py  models.py  mysql.py  orm.tests.py  pw.tests.py  tests.http  tests.py
tests/config/: conf.local.yaml  conf.test.yaml
tests/controllers/account/: index.py
tests/controllers/api/: test.py
tests/controllers/home/: index.py  list.py
tests/controllers/search/: index.py
tests/controllers/upload/: index.py
tests/controllers/user/: index.py
tests/controllers/view/: index.py
tests/controllers/ws/: index.py
tests/middleware/: robot.py  ser_error.py
tests/middlewares/: auth.py  robot.py  ser_error.py
tests/services/: user.py
tests/static/css/: index.css
tests/static/js/: index.js  ws.js
tests/template/: 500.html  index.html
tests/templates/: 404.html  index.html  list.html  upload.html  websocket.html
web/: http.py
