[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudoll"
version = "3.0.1" 
description = "Assist in quickly creating distributable microservices based on aiohttp, with a focus on simplicity and ease of use."
authors = [
  {name = "Qiu", email = "smallerqiu@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.6.0"
license = "MIT"
keywords = ["Microservices", "aiohttp", "cloudoll"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "watchfiles",
  "colorlog",
  "aiomysql",
  "aiopg",
  "aiohttp",
  "redis[hiredis]",
  "aiomcache",
  "jinja2",
  "pyjwt",
  "aiohttp_session[secure]",
  "PyYAML",
  "click",
  "envyaml",
  "psutil",
  "tabulate",
  "concurrent_log_handler"
]

[project.urls]
Homepage = "https://github.com/smallerqiu/cloudoll-py"
Repository = "https://github.com/smallerqiu/cloudoll-py"

[project.scripts]
cloudoll = "cloudoll.cli:cli"