[metadata]
name = cloudoll
version = attr: cloudoll.__version__
description = Assist in quickly creating distributable microservices.
long_description = file: README.md
long_description_content_type = text/markdown
author = Qiu
author_email = smallerqiu@gmail.com
url = https://gitee.com/chuchur/cloudoll-py

[options]
packages = find:
# install_requires =
#     watchfiles
#     colorlog
#     aiomysql
#     aiopg
#     aiohttp
#     redis[hiredis]
#     aiomcache
#     jinja2
#     pyjwt
#     aiohttp_session[secure]
#     PyYAML
#     click
#     envyaml
#     psutil
#     tabulate
#     concurrent_log_handler
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    cloudoll = cloudoll.cli:cli